--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,6 +120,25 @@ input, select, textarea {
 			-ms-transition: none !important;
 			transition: none !important;
 		}
+	#modal {
+		position: fixed; /* Posición fija para que el modal se mantenga en su lugar */
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		backdrop-filter: blur(5px);/* Fondo semitransparente oscuro para el modal */
+		z-index: 1; /* Asegura que el modal esté en la parte superior */
+		display: flex; /* Utiliza flexbox para centrar vertical y horizontalmente */
+		justify-content: center; /* Centra horizontalmente */
+		align-items: center; /* Centra verticalmente */
+		flex-direction: column;
+		}
+		#modal img {
+			max-width: 80vw; /* Limita la altura de la imagen dentro del modal */
+			margin: 20px auto; /* Espaciado para la imagen para centrarla verticalmente */
+			display: block; /* Asegura que la imagen esté centrada horizontalmente */
+		  }
 
 /* Typography */
 
@@ -3883,4 +3902,10 @@ input, select, textarea {
 			padding: 4rem;
 		}
 
+	}
+
+
+
+	#invisible{
+		display: none;
 	}
