--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,11 +135,42 @@ input, select, textarea {
 		align-items: center; /* Centra verticalmente */
 		flex-direction: column;
 		}
-		#modal img {
-			max-width: 80vw; /* Limita la altura de la imagen dentro del modal */
-			margin: 20px auto; /* Espaciado para la imagen para centrarla verticalmente */
-			display: block; /* Asegura que la imagen esté centrada horizontalmente */
-		  }
+	#modal img {
+		max-width: 80vw; /* Limita la altura de la imagen dentro del modal */
+		margin: 20px auto; /* Espaciado para la imagen para centrarla verticalmente */
+		display: block; /* Asegura que la imagen esté centrada horizontalmente */
+		}
+
+
+	#modal3 {
+	cursor: pointer;
+	position: fixed; /* Posición fija para que el modal3 se mantenga en su lugar */
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(5px);/* Fondo semitransparente oscuro para el modal3 */
+	z-index: 1; /* Asegura que el modal3 esté en la parte superior */
+	display: flex; /* Utiliza flexbox para centrar vertical y horizontalmente */
+	justify-content: center; /* Centra horizontalmente */
+	align-items: center; /* Centra verticalmente */
+	flex-direction: column;
+	}
+	#modal3 img {
+		max-width: 80vw; /* Limita la altura de la imagen dentro del modal */
+		margin: 20px auto; /* Espaciado para la imagen para centrarla verticalmente */
+		display: block; /* Asegura que la imagen esté centrada horizontalmente */
+		}
+
+	.cardDivThanks{
+		transition: 0.5s ease-in-out;
+		background-color: aliceblue;
+		padding: 12px;
+		width: 90%;
+		max-width: 600px;
+		border-radius: 12px;
+	}
 
 /* Typography */
 
