--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -40,14 +40,14 @@
 
 // Palette.
 	$palette: (
-		bg:						#ffffff,
-		fg:						#000000,
-		fg-bold:				#000000,
+		bg:						#e6e6e6,
+		fg:						#232323,
+		fg-bold:				#232323,
 		fg-light:				rgba(0,0,0,0.25),
 		border:					rgba(144,144,144,0.25),
 		border-bg:				rgba(144,144,144,0.1),
-		accent:					#49fcd4,
-		accent-border:			desaturate(darken(#49fcd4, 8), 30),
-		accent-alt:				desaturate(darken(#49fcd4, 10), 20),
-		accent-bg:				transparentize(#49fcd4, 0.75)
+		accent:					#e6e6e6,
+		accent-border:			desaturate(darken(#e6e6e6, 8), 30),
+		accent-alt:				desaturate(darken(#e6e6e6, 10), 20),
+		accent-bg:				transparentize(#e6e6e6, 0.75)
 	);
